# SDL-FSM

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: classmethods.py  showcase.py
src/SDL_FSM/: __init__.py  base_types.py  event_handler.py  message.py  statemachine.py  statemachine_builder.py  transition.py
tests/: fixtures.py  graph_export.py  simple.py  test_messages.py
