[metadata]
name = SDL-FSM-alex.pyattaev
version = 0.0.1
author = Alexander Pyattaev
author_email = alex.pyattaev@gmail.com
description = IDE-friendly FSM framework for Python inspired by SDL/UML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexpyattaev/SDL-FSM/issues
project_urls =
    Bug Tracker = https://github.com/alexpyattaev/SDL-FSM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
